fix side-content not aligning with the bottom of the card container (using flex)

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body{
 
 .projects-container{
     display: grid;
+    flex-grow: 1;
 
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -116,15 +117,19 @@ header{
 .projects{
     grid-row: 1/3;
     grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
 }
 .announcements{
     grid-row:  1/2;
     grid-column: 2/3;
+    flex: 1;
 }
 
 .trending{
     grid-row: 2/3;
     grid-column: 2/3;
+    flex: 1;
 }
 
 .card{
@@ -246,7 +251,6 @@ li{
     flex-direction: column;
     gap: 20px;
     padding: 20px 15px 10px 25px;
-    height:251px;
 }
 
 .trending-card .user{
@@ -268,4 +272,18 @@ li{
 
 .trending-card, .announcements{
     min-width: 200px;
+}
+
+.side-content, .projects {
+    grid-row:1/3;
+}
+
+.side-content, .trending{
+    display: flex;
+    flex-direction: column;
+    flex:1;
+}
+
+.trending-card{
+    flex:1
 }
